feat(ASB-0060): Add example dashboard
