# apiserver/api.go
@@ -25,6 +25,14 @@ type ConfigurationApiRouter interface {
 	PutConfigurationById(http.ResponseWriter, *http.Request)
 }
 
+// CustomizationApiRouter defines the required methods for binding the api requests to a responses for the CustomizationApi
+// The CustomizationApiRouter implementation should parse necessary information from the http request,
+// pass the data to a CustomizationApiServicer to perform the required actions, then write the service results to the http response.
+type CustomizationApiRouter interface {
+	GetDashboardTemplateByName(http.ResponseWriter, *http.Request)
+	GetDashboardTemplateNames(http.ResponseWriter, *http.Request)
+}
+
 // VersionApiRouter defines the required methods for binding the api requests to a responses for the VersionApi
 // The VersionApiRouter implementation should parse necessary information from the http request,
 // pass the data to a VersionApiServicer to perform the required actions, then write the service results to the http response.
@@ -43,6 +51,15 @@ type ConfigurationApiServicer interface {
 	GetConfigurations(context.Context) (ImplResponse, error)
 	PostConfiguration(context.Context, Configuration) (ImplResponse, error)
 	PutConfigurationById(context.Context, int64, Configuration) (ImplResponse, error)
+}
+
+// CustomizationApiServicer defines the api actions for the CustomizationApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type CustomizationApiServicer interface {
+	GetDashboardTemplateByName(context.Context, string, string) (ImplResponse, error)
+	GetDashboardTemplateNames(context.Context) (ImplResponse, error)
 }
 
 // VersionApiServicer defines the api actions for the VersionApi service
