# openapi.yaml
@@ -116,6 +116,60 @@ paths:
         "400":
           description: Bad request
 
+  /dashboard-template-names:
+    get:
+      tags:
+        - Customization
+      summary: List available dashboard templates
+      description: Delivers all names for which the app provides dashboard templates.
+      operationId: getDashboardTemplateNames
+      responses:
+        "200":
+          description: Successfully returned list of template names
+          content:
+            application/json:
+              schema:
+                description: Names of available dashboard templates
+                type: array
+                items:
+                  description: Name of the dashboard template
+                  type: string
+
+  /dashboard-templates/{dashboard-template-name}:
+    get:
+      tags:
+        - Customization
+      summary: Get a full dashboard template
+      description: Delivers a dashboard template that can be assigned to users in Eliona
+      externalDocs:
+        description: The API to assign the dashboard to users in Eliona (see post /dashboards endpoint).
+        url: https://github.com/eliona-smart-building-assistant/eliona-api
+      operationId: getDashboardTemplateByName
+      parameters:
+        - name: dashboard-template-name
+          in: path
+          description: Name of the dashboard template
+          required: true
+          schema:
+            type: string
+            example: Smart Waste
+        - name: projectId
+          in: query
+          description: Define the project the dashboard should be
+          required: true
+          schema:
+            type: string
+            example: 99
+      responses:
+        "200":
+          description: Successfully returned dashboard template
+          content:
+            application/json:
+              schema:
+                $ref: 'https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/main/openapi.yaml#/components/schemas/Dashboard'
+        "404":
+          description: Template with name not found
+
   /version:
     get:
       summary: Version of the API
